# computer_emulator

./: CMakeLists.txt  README.md
include/: Clock.h  Component.h  Computer.h
include/components/: CPU.h
src/: Clock.cpp  Component.cpp  Computer.cpp  main.cpp
src/components/: CPU.cpp
